Refactor and feat: deletion

--- a/src/templates/user/user.html
+++ b/src/templates/user/user.html
@@ -38,4 +38,5 @@
         
         <button type="submit">Submit</button><br>
     </form>
+    <button type="delete" onclick="deleteEntry()">Delete</button><br>
 </div>
