--- a/src/templates/vehicle/vehicle.html
+++ b/src/templates/vehicle/vehicle.html
@@ -55,4 +55,5 @@
         
         <button type="submit">Submit</button><br>
     </form>
+    <button type="delete" onclick="deleteEntry()">Delete</button><br>
 </div>
