Feat: Deleted entry handling

--- a/src/templates/payment/payment.html
+++ b/src/templates/payment/payment.html
@@ -5,6 +5,7 @@
         <label for="booking">Booking</label><br>
         <select name="booking">
             {{bookingList}}
+            {{selfBooking}}
         </select><br><br>
 
         <label for="amount">Payment amount</label><br>
