--- a/ui/components/nav-token.html
+++ b/ui/components/nav-token.html
@@ -1,12 +1,11 @@
 <nav>
-    <ul>
-      <li><a href="#" onclick="navigate('home')">Mājas</a></li>
-      <li><a href="#" onclick="navigate('car-list')">Skatīt mašīnas</a></li>
-      <li><a href="#" onclick="navigate('booking')">Veikt rezervāciju</a></li>
-      <li><a href="#" onclick="navigate('payment')">Maksāt</a></li>
-      <li><a href="#" onclick="navigate('login')">Pieslēgties</a></li>
-      <li><a href="#" onclick="navigate('register')">Reģistrēties</a></li>
-      <li><a href="#" onclick="" id="logout">Iziet</a></li>
-    </ul>
-  </nav>
-  
+  <ul>
+    <li><a href="#home" onclick="navigate('home')">Mājas</a></li>
+    <li><a href="#car-list" onclick="navigate('car-list')">Skatīt mašīnas</a></li>
+    <li><a href="#booking" onclick="navigate('booking')">Veikt rezervāciju</a></li>
+    <li><a href="#payment" onclick="navigate('payment')">Maksāt</a></li>
+    <li><a href="#login" onclick="navigate('login')">Pieslēgties</a></li>
+    <li><a href="#register" onclick="navigate('register')">Reģistrēties</a></li>
+    <li><a href="#logout" onclick="" id="logout">Iziet</a></li>
+  </ul>
+</nav>
