--- a/ui/components/nav-token.html
+++ b/ui/components/nav-token.html
@@ -6,6 +6,7 @@
     <li><a href="#payment" onclick="navigate('payment')">Maksāt</a></li>
     <li><a href="#login" onclick="navigate('login')">Pieslēgties</a></li>
     <li><a href="#register" onclick="navigate('register')">Reģistrēties</a></li>
+    <li><a href="#profile" onclick="navigate('profile')">Profils</a></li>
     <li><a href="#logout" onclick="" id="logout">Iziet</a></li>
   </ul>
 </nav>
