--- a/ui/css/styles.css
+++ b/ui/css/styles.css
@@ -1,3 +1,4 @@
+/* Styling for main page reset */
 body {
     font-family: Arial, sans-serif;
   }
@@ -34,4 +35,12 @@ body {
     padding: 20px;
     margin: 10px 0;
   }
-  
+
+
+/* Styling main */
+
+/* Navbar styling */
+#header-logo {
+  width: 303px;
+  height: 62px;
+}
