Adds styling to new dynamic main page.

--- a/ui/components/footer.html
+++ b/ui/components/footer.html
@@ -1,4 +1,57 @@
-<footer>
-    <p>&copy; 2024 AutoTev.lv</p>
-  </footer>
-  
+<footer class="footer">
+    <div class="footer__copyright">
+        <img class="footer__copyright__logo" src="assets/footer.png" alt="#">
+        <p class="footer__copyright__text">
+            Copyright © 2024 AutoTev.Lv.
+            <br>
+            All rights reserved
+        </p>
+    </div>
+    <div class="footer__links">
+        <section class="footer__links__block1">
+            <h3 class="footer__links__block1--heading">Company</h3>
+            <ul class="footer__links__block1__linkContainer">
+                <li class="footer__links__block1__element">
+                    <a class="footer__links__block1__element--asset" href="#">About us</a>
+                </li>
+                <li class="footer__links__block1__element">
+                    <a class="footer__links__block1__element--asset" href="#">Blog</a>
+                </li>
+                <li class="footer__links__block1__element">
+                    <a class="footer__links__block1__element--asset" href="#">Contact us</a>
+                </li>
+                <li class="footer__links__block1__element">
+                    <a class="footer__links__block1__element--asset" href="#">Pricing</a>
+                </li>
+            </ul>
+        </section>
+        <section class="footer__links__block2">
+            <h3 class="footer__links__block2--heading">Support</h3>
+            <ul class="footer__links__block2__linkContainer">
+                <li class="footer__links__block2__element">
+                    <a class="footer__links__block2__element--asset" href="#">Help center</a>
+                </li>
+                <li class="footer__links__block2__element">
+                    <a class="footer__links__block2__element--asset" href="#">Terms of service</a>
+                </li>
+                <li class="footer__links__block2__element">
+                    <a class="footer__links__block2__element--asset" href="#">Chat bot</a>
+                </li>
+                <li class="footer__links__block2__element">
+                    <a class="footer__links__block2__element--asset" href="#">Privacy policy</a>
+                </li>
+            </ul>
+        </section>
+        <section class="footer__links__block3">
+            <h3 class="footer__links__block3--heading">Stay up to date</h3>
+            <div class="footer__links__block3__element">
+                <label for="email">
+                    <input class="footer__links__block3__element--input" type="text" placeholder="Enter you email">
+                    <button class="footer__links__block3__element--submit" type="submit">
+                        <i class="fa fa-paper-plane fa-2x"></i>
+                    </button>
+                </label>
+            </div>
+        </section>
+    </div>
+</footer>
