Adds styling to car-list page.

--- a/ui/components/nav.html
+++ b/ui/components/nav.html
@@ -1,24 +1,24 @@
 <nav class="header__navigation">
   <ul class="header__navigation__container">
     <li class="header__navigation__element">
-      <img class="header__navigation__element--logo" id="header-logo" src="assets/logo.png  " alt="#">
+      <a href="#" onclick="navigate('home')"><img class="header__navigation__element--logo" id="header-logo" src="assets/logo.png" alt="#"></a>
     </li>
   </ul>
   <ul class="header__navigation__container header__navigation__container--pages">
     <li class="header__navigation__element">
-      <a class="header__navigation__element--asset" href="#" onclick="navigate('home')">Sākumlapa</a>
+      <a class="header__navigation__element--asset" href="#" onclick="navigate('booking')">Veikt rezervāciju</a>
     </li>
     <li class="header__navigation__element">
-      <a class="header__navigation__element--asset" href="#" onclick="navigate('par-mums')">Par mums</a>
+      <a class="header__navigation__element--asset" href="#" onclick="navigate('payment')">Maksāt</a>
     </li>
     <li class="header__navigation__element">
-      <a class="header__navigation__element--asset" href="#" onclick="navigate('pakalpojumi')">Pakalpojumi</a>
+      <a class="header__navigation__element--asset" href="#" onclick="navigate('login')">Pieslēgties</a>
     </li>
     <li class="header__navigation__element">
-      <a class="header__navigation__element--asset" href="#" onclick="navigate('kontakti')">Kontakti</a>
+      <a class="header__navigation__element--asset" href="#" onclick="navigate('register')">Reģistrēties</a>
     </li>
     <li class="header__navigation__element header__navigation__button">
-      <a class="header__navigation__element--asset header__navigation__element--button" href="#" onclick="navigate('izveleties-masinu')">Izvēlēties automašīnu-></a>
+      <a class="header__navigation__element--asset header__navigation__element--button" href="#" onclick="navigate('car-list')">Izvēlēties automašīnu-></a>
     </li>
     <form action="#">
       <select name="language" id="lang">
