--- a/ui/css/app.css
+++ b/ui/css/app.css
@@ -171,12 +171,22 @@
 }
 .car__info {
   background-color: #F5F7FA;
-  margin: 20px;
   padding: 10px;
-  width: 500px;
-  flex-flow: row wrap;
-  display: flex;
-  justify-content: center;
+  flex: 1 1 300px;
+  margin: 10px;
+  box-sizing: border-box;
+  max-width: 100%;
+}
+@media (max-width: 768px) {
+  .car__info {
+    flex: 1 1 calc(50% - 20px); /* For screens smaller than 768px, allow two items per row */
+  }
+}
+
+@media (max-width: 480px) {
+  .car__info {
+    flex: 1 1 calc(100% - 20px); /* For screens smaller than 480px, allow one item per row */
+  }
 }
 .car__image-container {
   height: 300px;
@@ -198,3 +208,134 @@
 }
 
 /*# sourceMappingURL=app.css.map */
+
+/* Styling main */
+.page-container {
+  padding: 20px;
+  margin: 20px auto;
+  max-width: 800px;
+  background: #F5F7FA;
+  border: 1px solid #ccc;
+}
+
+/* Profile Section Styles */
+.profile h1,
+.profile h2 {
+  margin-bottom: 15px;
+  color: #2c5dd3;
+}
+
+.profile .user-details,
+.profile .booking {
+  margin-bottom: 20px;
+}
+
+.profile .booking p,
+.profile .user-details p,
+.profile .reservation p {
+  margin: 0.6rem 0;
+}
+
+/* Payment Section Styles */
+.payment h1 {
+  margin-bottom: 15px;
+  color: #2c5dd3;
+}
+
+.payment form {
+  margin-bottom: 20px;
+}
+
+.payment form label {
+  display: block;
+  margin-bottom: 10px;
+}
+
+.payment form input {
+  width: 100%;
+  padding: 8px;
+  margin-bottom: 10px;
+  border: 1px solid #ccc;
+}
+
+.payment form button {
+  padding: 10px 20px;
+  background-color: #2c5dd3;
+  color: white;
+  border: none;
+  cursor: pointer;
+}
+
+/* Booking Section Styles */
+.booking h1 {
+  margin-bottom: 15px;
+  color: #2c5dd3;
+}
+
+.booking form label {
+  display: block;
+  margin-bottom: 10px;
+}
+
+.booking form input {
+  width: 100%;
+  padding: 8px;
+  margin-bottom: 10px;
+  border: 1px solid #ccc;
+}
+
+.booking form button {
+  padding: 10px 20px;
+  background-color: #2c5dd3;
+  color: white;
+  border: none;
+  cursor: pointer;
+}
+
+.payment-button {
+  padding: 10px 20px;
+  background-color: #2c5dd3;
+  color: white;
+  border: none;
+  cursor: pointer;
+  margin-top: 1rem;
+  margin-bottom: 1rem;
+}
+
+/* Login register form styles */
+.form-container {
+  padding: 20px;
+  margin: 20px auto;
+  max-width: 800px;
+  background: #F5F7FA;
+  border: 1px solid #ccc;
+}
+
+.form-container h1 {
+  margin-bottom: 15px;
+  color: #2c5dd3;
+}
+
+.form-container form {
+  margin-bottom: 20px;
+}
+
+.form-container form label {
+  display: block;
+  margin-bottom: 10px;
+}
+
+.form-container form input {
+  width: 100%;
+  padding: 8px;
+  margin-bottom: 10px;
+  border: 1px solid #ccc;
+}
+
+.form-container form button {
+  padding: 10px 20px;
+  background-color: #2c5dd3;
+  color: white;
+  border: none;
+  cursor: pointer;
+}
